// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-timepicker default 1`] = `
<lightning-timepicker>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      for="input-2"
    />
    <div
      class="slds-form-element__control"
    >
      <lightning-base-combobox
        class="slds-combobox_container"
      >
        #shadow-root(open)
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
            role="combobox"
          >
            <div
              class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
              role="none"
            >
              <input
                aria-autocomplete="none"
                aria-controls="dropdown-element-2"
                autocomplete="off"
                class="slds-input slds-combobox__input"
                id="input-2"
                placeholder=""
                readonly=""
                role="textbox"
                type="text"
              />
              <div
                class="slds-input__icon-group slds-input__icon-group_right"
              >
                <lightning-icon
                  class="slds-icon-utility-clock slds-input__icon slds-input__icon_right slds-icon_container"
                >
                  #shadow-root(open)
                    <lightning-primitive-icon>
                      #shadow-root(open)
                        <svg
                          aria-hidden="true"
                          class="slds-icon slds-icon-text-default slds-icon_x-small"
                          data-key="clock"
                          focusable="false"
                        >
                          <use
                            xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#clock"
                          />
                        </svg>
                    </lightning-primitive-icon>
                </lightning-icon>
              </div>
            </div>
            <div
              class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-5 slds-dropdown_left"
              data-dropdown-element="true"
              id="dropdown-element-2"
              role="listbox"
            />
          </div>
      </lightning-base-combobox>
    </div>
</lightning-timepicker>
`;

exports[`lightning-timepicker renders help text 1`] = `
<lightning-timepicker>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      for="input-7"
    />
    <lightning-helptext>
      #shadow-root(open)
        <pre>
          Hello hello
           
          utility:info
        </pre>
    </lightning-helptext>
    <div
      class="slds-form-element__control"
    >
      <lightning-base-combobox
        class="slds-combobox_container"
      >
        #shadow-root(open)
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
            role="combobox"
          >
            <div
              class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
              role="none"
            >
              <input
                aria-autocomplete="none"
                aria-controls="dropdown-element-7"
                autocomplete="off"
                class="slds-input slds-combobox__input"
                id="input-7"
                placeholder=""
                readonly=""
                role="textbox"
                type="text"
              />
              <div
                class="slds-input__icon-group slds-input__icon-group_right"
              >
                <lightning-icon
                  class="slds-icon-utility-clock slds-input__icon slds-input__icon_right slds-icon_container"
                >
                  #shadow-root(open)
                    <lightning-primitive-icon>
                      #shadow-root(open)
                        <svg
                          aria-hidden="true"
                          class="slds-icon slds-icon-text-default slds-icon_x-small"
                          data-key="clock"
                          focusable="false"
                        >
                          <use
                            xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#clock"
                          />
                        </svg>
                    </lightning-primitive-icon>
                </lightning-icon>
              </div>
            </div>
            <div
              class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-5 slds-dropdown_left"
              data-dropdown-element="true"
              id="dropdown-element-7"
              role="listbox"
            />
          </div>
      </lightning-base-combobox>
    </div>
</lightning-timepicker>
`;
